<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".ui.main.MainActivity">

    <LinearLayout
        android:id="@+id/categoriesLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:orientation="vertical"
        app:contentPadding="@dimen/_8sdp"
        app:elevation="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/categoriesTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular_font"
            android:padding="@dimen/_2sdp"
            android:text="@string/category"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/categoriesRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/randomPhotosLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_marginTop="@dimen/_15sdp"

        android:layout_marginBottom="@dimen/_4sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categoriesLinearLayout">


        <TextView
            android:id="@+id/randomPhotosTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/bold_font"
            android:padding="@dimen/_2sdp"
            android:text="@string/popular_photos"
            android:textColor="@color/gray"
            android:textSize="@dimen/_12ssp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/randomPhotosRV"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_5sdp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            tools:listitem="@layout/random_photo_item" />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/userNameColor"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/randomPhotosLinearLayout" />

    <TextView
        android:id="@+id/noInternet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_internet_message"
        android:textColor="@color/no_wifi_bg"
        android:textSize="@dimen/_18ssp"
        android:visibility="gone"
        app:drawableTopCompat="@drawable/ic_no_wifi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>



