<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/horizontal_guideline2"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/currentPhotoIV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                tools:ignore="contentDescription"
                tools:src="@drawable/portrait" />

            <ImageView
                android:id="@+id/icBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:src="@drawable/ic_back"
                tools:ignore="contentDescription" />


        </RelativeLayout>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.60" />

        <LinearLayout
            android:id="@+id/actionsLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_25sdp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/horizontal_guideline">

            <ImageView
                android:id="@+id/icEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/custom_oval_bg"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/ic_filter"
                tools:ignore="contentDescription" />

            <ImageView
                android:id="@+id/icShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_15sdp"
                android:background="@drawable/custom_oval_bg"
                android:padding="@dimen/_11sdp"
                android:src="@drawable/ic_share"
                tools:ignore="contentDescription" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/detailsLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/custom_detailes_bg"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/actionsLinearLayout">


            <LinearLayout
                android:id="@+id/descriptionLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/descriptionTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/regular_font"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/description"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/regular_font"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    tools:text="Green Pine Trees Under White Sky" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/photographerTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:fontFamily="@font/regular_font"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/photographer"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/photographerNameTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/regular_font"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    tools:text="Markus Spiske" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/linkTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:fontFamily="@font/regular_font"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/link"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/photographerLinkTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/regular_font"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textIsSelectable="true"
                    android:textSize="@dimen/_12ssp"
                    tools:text="Markus Spiske" />


            </LinearLayout>


        </LinearLayout>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.85" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
